# music

./: .gitignore  README.md  meson.build
data/: meson.build  music.gschema.xml
po/: aa.po  ab.po  af.po  ak.po  am.po  ar.po  as.po  ast.po  ay.po  az.po  ba.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ce.po  ckb.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  (+96 more)
src/: AudioObject.vala  Config.vala.in  Lastfm.vala  MainWindow.vala  PlaybackManager.vala  meson.build
src/Widgets/: ConnectLastfm.vala
